--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "homepage": "https://bpyle02.github.io/portfolio",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0-next.58",
     "react-scroll-into-view": "^1.10.1",
