--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://bpyle02.github.io/portfolio",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/cli": "^2.23.1",
+    "@sanity/client": "^2.23.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
