--- a/brandonsblog/package.json
+++ b/brandonsblog/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.23.1",
+    "@sanity/code-input": "^2.23.2",
     "@sanity/core": "^2.23.1",
     "@sanity/default-layout": "^2.23.1",
     "@sanity/default-login": "^2.23.1",
@@ -23,6 +24,7 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "sanity-plugin-markdown": "^2.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {},
