--- a/brandonsblog/package.json
+++ b/brandonsblog/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.23.1",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/code-input": "^2.23.2",
     "@sanity/core": "^2.23.1",
     "@sanity/default-layout": "^2.23.1",
