--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.4",
